# sprintable

./: .dockerignore  .env.example  .gitignore  .venv  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.oss  H1S6_SMOKE.md  Makefile  README.ko.md  README.md  SECURITY.md  cloudbuild.yaml  docker-compose.oss.yml  docker-compose.prod.yml  docker-compose.yml  lighthouserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.txt  service-backend.yaml  test-button.tsx  test-link-error.tsx  test-render.js  tsconfig.json  turbo.json  vitest.config.ts
backend/: .env.example  .gitignore  Dockerfile  bootstrap.py  migration_summary_20260515_094857.json  migration_summary_20260515_095852.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/_archive/: 0007_add_doc_comments_revisions.py  0010_backfill_created_by.py  0017_add_totp_security_fields.py  0022_add_created_by_to_team_members.py  0028_add_attachments_to_memo_replies.py  0034_add_conversation_webhook_deliveries.py  0042_add_org_invites_email_tracking.py  0043_add_polar_webhook_events.py  0046_backfill_org_members_from_team_members.py  0048_add_can_manage_members.py  0052_backfill_project_members_to_org_members.py  0059_add_outcome_fields_to_epic.py  0066_add_hitl_config.py  0074_drop_standup_team_member_fks.py  README.md
backend/alembic/baseline/: schema.sql  seed.sql
backend/alembic/versions/: 0000_create_base_schema.py  0001_create_users_refresh_tokens.py  0002_disable_rls.py  0003_drop_rls_policies.py  0004_create_agent_api_keys.py  0005_add_oauth_fields.py  0006_add_story_comments_activities.py  0008_backfill_team_members_user_id.py  0009_fix_supabase_uid_mapping.py  0011_add_memo_entity_links.py  0012_add_org_members_unique_constraint.py  0013_add_workflow_trigger_types.py  0014_backfill_routing_trigger_type_slugs.py  0015_add_workflow_execution_logs.py  0016_add_workflow_templates.py  0018_add_email_verified.py  0018_add_login_lockout_fields.py  0018_add_tos_accepted_at.py  0019_add_login_lockout_fields.py  0020_add_tos_accepted_at.py  0021_add_login_audit_logs.py  0023_migrate_webhook_url_to_webhook_configs.py  0024_add_events_table.py  0025_add_read_at_to_events.py  0026_add_last_project_id_to_users.py  0027_add_assignee_id_to_epics_and_docs.py  0028_add_attachments_to_memo_replies.py  0029_drop_notifications_type_check.py  0030_add_conversations.py  0031_add_thread_support_to_conversation_messages.py  0032_add_status_to_conversations.py  0033_add_notification_preferences.py  0034_add_conversation_webhook_deliveries.py  0035_add_review_type_metadata_to_conversation_messages.py  0036_add_activity_logs.py  0037_add_fakechat_port_to_team_members.py  0038_add_presence_columns_to_team_members.py  0039_add_violation_level_to_projects.py  0040_add_file_locks.py  0041_add_org_invites.py  (+166 more)
backend/app/: main.py
backend/app/core/: config.py  database.py  logging_config.py  rate_limit.py  security.py  shutdown.py  ssrf.py
backend/app/dependencies/: auth.py  ownership.py  project_scope.py  rate_limit.py
backend/app/models/: __init__.py  a2a_task.py  activity_event.py  activity_log.py  agent_deployment.py  agent_event_seq.py  agent_gateway.py  agent_routing_rule.py  agent_run.py  agent_session.py  api_key.py  asset.py  audit.py  auth_identity.py  auth_native_bootstrap.py  base.py  bridge.py  conversation.py  conversation_webhook_delivery.py  (+60 more)
backend/ee/: plan_limits.py
backend/mcp/: .mcp.json.example  __main__.py  config.py  response.py  server.py
backend/monitoring/: alert_policies.json  dashboard.json
backend/scripts/: RUNBOOK_prod_db_split.md  audit_apikey_member_anchor.py  backfill_activity_events.py  backfill_void_empty_merge_gates.py  check_advisor_p0_provenance.py  check_ee_pricing_promotion_fork.sh  decommission_amplify_supabase.sh  deploy_backend.sh  deploy_frontend.sh  deploy_mcp_dev.sh  deploy_mcp_prod.sh  deploy_realtime_gce.sh  dev_ee_stamp_precheck.sh  fk_null_survey_result.json  measure_performance.sh  migrate.sh  migrate_memo_to_conversations.py  migrate_memos_to_conversations.py  migrate_supabase_to_cloud_sql.sh  provision_cloud_sql.sh  provision_migrate_job.sh  provision_realtime_gclb.sh  rollback_conversations.py  setup_artifact_registry.sh  setup_dns.sh  setup_iam.sh  setup_monitoring.sh  setup_secret_manager.sh  setup_workload_identity.sh  verify_gcp_migration.sh  verify_grant_only_story_assign.py  verify_migration.py
backend/sprintable_mcp/: .mcp.json.example  README.md  __main__.py  api_client.py  config.py  http_auth.py  pyproject.toml  response.py  schemas.py  server.py  sse_bridge.py  toolset.py
backend/tests/: authz_coverage_lib.py  conftest.py  deeplink_contract_lib.py  test_037a8aa8_agent_discoverability.py  test_04e059e5_artifact_created_event_realdb.py  test_0746_build_app_metadata_org_scope.py  test_0746_last_org_id_refresh_scope.py  test_083176e8_story_search_q_realdb.py  test_0d68_grant_member_resolution.py  test_139d2405_slug_infra_realdb.py  test_1743_error_reporting_compat.py  test_1925_b1_goal_rename_realdb.py  test_1931_oauth_handoff_realdb.py  test_1934_push_notification_wiring_realdb.py  test_1968_gate_project_id_threading.py  test_1970_gate_single_get.py  test_1972_gate_risk_grade.py  test_1973_gate_urgency_sort.py  test_1974_gate_assigned_to_me.py  test_1976_read_state_query_builders.py  test_1976_read_state_realdb.py  test_1983_doc_gate_assigned_to_me_who_state.py  test_1992_unread_count_total_realdb.py  test_1993_mention_parser.py  test_1993_mentions_realdb.py  test_1994_backlink_api_realdb.py  test_1994_backlinks_unit.py  test_2003_a2a_rpc_error_contract_realdb.py  test_2004_a2a_sendmessage_idempotency_realdb.py  test_2005_a2a_rpc_timeout.py  test_2009_conversation_detail_participants_realdb.py  test_2027_gate_approval_reason_enforce.py  test_2038_hypothesis_outcome_result_enforce.py  test_2039_project_slug_ascii.py  test_2043_ac3_hitl_reason_enforce.py  test_2047_explicit_ask_gate.py  test_2049_default_participation_roles.py  test_2054_gate_inbox.py  test_2055_attachment_image_dimensions.py  test_2058_apikey_scope_allowlist.py  (+620 more)
(+1988 files in other folders)
