[project]
name = "sprintable-backend"
version = "0.1.0"
description = "Sprintable FastAPI backend — Phase B migration layer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "slowapi>=0.1.9",
    "mcp>=1.8.0",  # E-MCP-HTTP: streamable-http floor(sprintable-mcp-dev 서비스가 동 backend 이미지 사용)
    "resend>=2.0.0",
    "google-analytics-data>=0.18.0",
    # R2 채팅 첨부 AI 컨텍스트(9d130c01): GCS 서비스계정 read + 문서 텍스트 추출
    "google-cloud-storage>=2.18.0",
    # E-STORAGE-SSOT S1: S3/minio storage provider(BYO). STORAGE_PROVIDER=s3 일 때만 lazy import.
    "boto3>=1.34.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    # E-LOOP-LEDGER P1-S1: pgvector SQLAlchemy Vector 타입(embeddings 테이블). extension은 baseline에 이미 활성화됨.
    "pgvector>=0.3.0",
    # E-LOOP-LEDGER P1-S2/S25: Vertex AI(gemini-embedding-001 임베딩 + generate_text 생성형) 클라이언트.
    # ADC 인증(신규 크리덴셜 0). Gemini 피벗(2026-07-03)으로 anthropic[vertex](claude-sonnet-5
    # 생성형 경로)는 완전 은퇴 — moonklabs org GCP credit이 Vertex Claude 미포함.
    "google-genai>=1.0.0",
    # E-AUTH-REBUILD M2 Phase1-S4: ADC 액세스 토큰(Identity Toolkit createSessionCookie 호출).
    # google-cloud-storage의 전이 의존성으로 이미 설치돼 있었으나 직접 import하므로 명시 선언.
    "google-auth>=2.30.0",
    # E-AUTH-REBUILD 활성화게이트 C2(story 20f49099·산티아고 §7.4): Apple App Attest
    # attestation object는 CBOR(fmt/attStmt/authData) — stdlib에 CBOR 디코더가 없고, 손실
    # 없는 정확한 바이트 파싱이 보안 요구사항(§7.0: expo-app-integrity@0.3.0의 CBOR→UTF-8
    # 손실 버그를 명시적으로 피하는 게 이 스토리의 존재 이유) — 직접 파서 구현은 미묘한
    # CBOR 엣지케이스(indefinite-length map/array 등) 오파싱 리스크가 crypto 검증 우회로
    # 이어질 수 있어 검증된 라이브러리 사용.
    "cbor2>=5.6.0",
    "imagesize>=2.0.0",
    # E-ARCH S2(story #2078): EventBroker dual-publish shadow(Redis/Memorystore, event_broker_redis_
    # dual_publish_enabled default-off). rate_limiter.py의 RedisRateLimiter가 이미 `redis.asyncio`를
    # lazy-import하고 있었는데 이 패키지가 선언돼 있지 않았다(rate_limit_backend가 항상 "memory"라
    # 한 번도 실행 경로를 안 타 드러나지 않은 잠재 ImportError) — 이 선언이 그 갭도 같이 닫는다.
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "anyio>=4.13.0",
    "pytest-anyio>=0.0.0",
    "fakeredis>=2.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
markers = [
    "destructive_schema: module calls Base.metadata.create_all()/drop_all() directly to build/tear down its own schema — must run against an isolated throwaway DB, never the shared alembic-migrated baseline DB (drop_all issues DROP TABLE against objects that are VIEWs in baseline, e.g. team_members, and corrupts the DB for every later test in the same session). See story 8236bbc3 / docs/design-ci-realdb-gap-8236bbc3.",
]
